--- a/index.html
+++ b/index.html
@@ -22,79 +22,72 @@
       <section class="section flex-col pb-16">
         <form action="POST" class="form mb-8">
           <div class="mb-4">
-            <label for="name" class="form__label">First Name</label>
+            <label for="firstName">First Name</label>
             <input
               type="text"
-              id="name"
-              name="Name"
-              class="form__field block border-2 w-full p-2 rounded-md"
+              id="firstName"
+              name="firstName"
+              class="block border-2 w-full p-2 rounded-md"
               required
             />
           </div>
           <div class="mb-4">
-            <label for="name" class="form__label">Last Name</label>
+            <label for="lastName">Last Name</label>
             <input
               type="text"
-              id="name"
-              name="Name"
-              class="form__field block border-2 w-full p-2 rounded-md"
+              id="lastName"
+              name="lastName"
+              class="block border-2 w-full p-2 rounded-md"
               required
             />
           </div>
           <div class="flex mb-4 gap-x-4" id="bookmark">
             <div class="grow">
-              <label for="course" class="form__label">Gender</label>
+              <label for="course">Gender</label>
               <div class="flex gap-x-4 mt-2">
-                <div class="form__radio-group">
+                <div>
                   <input
                     type="radio"
-                    id="course1"
-                    name="course"
+                    name="gender"
+                    id="gender-male"
                     value="male"
                     class=""
                     required
                   />
-                  <label for="course1" class="font-bold">Male</label>
+                  <label for="gender-male" class="font-bold">Male</label>
                 </div>
-                <div class="form__radio-group">
+                <div>
                   <input
                     type="radio"
-                    id="course2"
-                    name="course"
+                    name="gender"
+                    id="gender-female"
                     value="female"
                     class=""
                   />
-                  <label for="course2" class="font-bold">Female</label>
+                  <label for="gender-female" class="font-bold">Female</label>
                 </div>
               </div>
             </div>
             <div class="grow">
-              <label for="name">Age</label>
+              <label for="age">Age</label>
               <input
                 type="number"
-                id="name"
-                name="Name"
-                class="form__field block border-2 w-full p-2 rounded-md"
+                id="age"
+                name="age"
+                class="block border-2 w-full p-2 rounded-md"
                 required
               />
             </div>
           </div>
           <div class="mb-4">
-            <label for="gender">Position</label>
+            <label for="position">Position</label>
             <select
-              id="gender"
-              name="gender"
-              class="form__field form__field--select block border-2 w-full p-2 rounded-md"
+              id="position"
+              name="position"
+              class="block border-2 w-full p-2 rounded-md"
               required
             >
-              <option
-                value=""
-                disabled
-                selected
-                class="form__option form__option--disabled"
-              >
-                Select a position
-              </option>
+              <option value="" disabled selected>Select a position</option>
               <option value="teacher">Teacher</option>
               <option value="student">Student</option>
             </select>
@@ -112,19 +105,93 @@
           >
             Table
           </h2>
-          <div class="flex items-center mb-4 justify-between">
-            <p class="caption-top text-left">
-              You selected:
-              <span id="data-selected">None</span>
-            </p>
+          <h3 class="text-xl font-bold ml-1 mb-2">Filters</h3>
+          <div class="flex items-center mb-4 justify-between gap-x-4">
             <input
               type="text"
-              class="border-2 py-2 px-4 rounded-lg w-1/3"
-              placeholder="Filter by name, gender, age, or position"
+              class="border-2 py-2 px-4 rounded-lg w-1/4 grow-0"
+              placeholder="Filter by name"
               name="filter"
               id="filter"
             />
-          </div>
+            <div class="flex gap-x-4 grow">
+              <div>
+                <input
+                  type="radio"
+                  name="gender"
+                  id="gender-gender-male"
+                  value="male"
+                  class=""
+                  required
+                />
+                <label for="gender-gender-male">Male</label>
+              </div>
+              <div>
+                <input
+                  type="radio"
+                  name="gender"
+                  id="gender-gender-female"
+                  value="female"
+                  class=""
+                />
+                <label for="gender-gender-female">Female</label>
+              </div>
+            </div>
+            <div class="flex gap-x-4 grow">
+              <div>
+                <input
+                  type="radio"
+                  name="position"
+                  id="gender-position-teacher"
+                  value="teacher"
+                  class=""
+                  required
+                />
+                <label for="gender-position-teacher">Teacher</label>
+              </div>
+              <div>
+                <input
+                  type="radio"
+                  name="position"
+                  id="gender-position-student"
+                  value="student"
+                  class=""
+                />
+                <label for="gender-position-student">Student</label>
+              </div>
+            </div>
+            <div class="flex items-center gap-x-2 grow w-1/5">
+              <label>Age Range</label>
+              <input
+                type="number"
+                id="age-min"
+                name="age-min"
+                class="w-1/6 border-2 p-2 rounded-md"
+                required
+              />
+              <label>to</label>
+              <input
+                type="number"
+                id="age-max"
+                name="age-max"
+                class="w-1/6 border-2 p-2 rounded-md"
+                required
+              />
+            </div>
+            <div>
+              <button
+                class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded-lg cursor-pointer"
+                id="filter-button"
+              >
+                Filter
+              </button>
+              <button
+                class="border-2 py-2 px-4 rounded-lg cursor-pointer"
+                id="clear-button"
+              >
+                Clear
+              </button>
+            </div>
         </div>
         <table class="w-full border border-collapse">
           <thead>
