--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             class="form__submit bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded-lg cursor-pointer"
           />
         </form>
-        <div id="filter-input">
+        <form id="filter-input">
           <h2
             class="title font-black text-5xl text-slate-700 mt-12 mb-6 text-center"
           >
@@ -111,7 +111,7 @@
               type="text"
               class="border-2 py-2 px-4 rounded-lg w-1/4 grow-0"
               placeholder="Filter by name"
-              name="filter"
+              name="name"
               id="filter"
             />
             <div class="flex gap-x-4 grow">
@@ -119,22 +119,21 @@
                 <input
                   type="radio"
                   name="gender"
-                  id="gender-gender-male"
+                  id="filter-gender-male"
                   value="male"
                   class=""
-                  required
                 />
-                <label for="gender-gender-male">Male</label>
+                <label for="filter-gender-male">Male</label>
               </div>
               <div>
                 <input
                   type="radio"
                   name="gender"
-                  id="gender-gender-female"
+                  id="filter-gender-female"
                   value="female"
                   class=""
                 />
-                <label for="gender-gender-female">Female</label>
+                <label for="filter-gender-female">Female</label>
               </div>
             </div>
             <div class="flex gap-x-4 grow">
@@ -142,22 +141,21 @@
                 <input
                   type="radio"
                   name="position"
-                  id="gender-position-teacher"
+                  id="filter-position-teacher"
                   value="teacher"
                   class=""
-                  required
                 />
-                <label for="gender-position-teacher">Teacher</label>
+                <label for="filter-position-teacher">Teacher</label>
               </div>
               <div>
                 <input
                   type="radio"
                   name="position"
-                  id="gender-position-student"
+                  id="filter-position-student"
                   value="student"
                   class=""
                 />
-                <label for="gender-position-student">Student</label>
+                <label for="filter-position-student">Student</label>
               </div>
             </div>
             <div class="flex items-center gap-x-2 grow w-1/5">
@@ -165,34 +163,33 @@
               <input
                 type="number"
                 id="age-min"
-                name="age-min"
-                class="w-1/6 border-2 p-2 rounded-md"
-                required
+                name="ageMin"
+                class="[-moz-appearance:_textfield] [&::-webkit-inner-spin-button]:m-0 [&::-webkit-inner-spin-button]:appearance-none [&::-webkit-outer-spin-button]:m-0 [&::-webkit-outer-spin-button]:appearance-none w-1/6 border-2 p-2 rounded-md"
               />
               <label>to</label>
               <input
                 type="number"
                 id="age-max"
-                name="age-max"
-                class="w-1/6 border-2 p-2 rounded-md"
-                required
+                name="ageMax"
+                class="[-moz-appearance:_textfield] [&::-webkit-inner-spin-button]:m-0 [&::-webkit-inner-spin-button]:appearance-none [&::-webkit-outer-spin-button]:m-0 [&::-webkit-outer-spin-button]:appearance-none w-1/6 border-2 p-2 rounded-md"
               />
             </div>
             <div>
               <button
                 class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded-lg cursor-pointer"
-                id="filter-button"
+                id="filter-btn"
               >
                 Filter
               </button>
               <button
                 class="border-2 py-2 px-4 rounded-lg cursor-pointer"
-                id="clear-button"
+                id="clear-btn"
               >
                 Clear
               </button>
             </div>
-        </div>
+          </div>
+        </form>
         <table class="w-full border border-collapse">
           <thead>
             <tr>
