feat: create clear filters feature

--- a/index.html
+++ b/index.html
@@ -177,15 +177,9 @@
             <div>
               <button
                 class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded-lg cursor-pointer"
-                id="filter-btn"
-              >
-                Filter
-              </button>
-              <button
-                class="border-2 py-2 px-4 rounded-lg cursor-pointer"
                 id="clear-btn"
               >
-                Clear
+                Clear Filters
               </button>
             </div>
           </div>
