docs: add proper documentation

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script type="module" src="./scripts/index.js"></script>
   </head>
   <body>
-    <div class="max-w-screen-lg mx-auto">
+    <div class="max-w-screen-lg mx-auto p-8">
       <h1
         class="title font-black text-6xl text-slate-700 mt-12 mb-6 text-center"
       >
@@ -76,6 +76,8 @@
                 name="age"
                 class="block border-2 w-full p-2 rounded-md"
                 required
+                min="0"
+                max="150"
               />
             </div>
           </div>
